# mediasoup

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .jscsrc  .jshintrc  .npmrc  .prettierignore  .prettierrc.json  .travis.yml  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  ISSUE_TEMPLATE.md  LICENSE  Makefile  README.md  TODO.md  TODO_CPP_SYNTAX.md  TODO_DATACHANNEL_TERMINATION.md  TODO_INVOKE.md  TODO_V2.md  TODO_WEBRTC_SERVER.md  docker-compose.yml  eslint.config.mjs  gulpfile.js  npm-scripts.js  npm-scripts.mjs  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
rust/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs  changelog.md  crypto_suite_fbs.patch  readme.md
rust/benches/: direct_data.rs  producer.rs
rust/examples/: echo.rs  multiopus.rs  readme.md  svc-simulcast.rs  videoroom.rs
rust/examples-frontend/: readme.md
rust/examples-frontend/echo/: .eslintrc.js  index.html  package.json  tsconfig.json  webpack.config.js
rust/examples-frontend/multiopus/: index.html  package.json  webpack.config.js
rust/examples-frontend/svc-simulcast/: index.html  package.json
rust/examples-frontend/videoroom/: index.html  package.json
rust/src/: data_structures.rs  event_handlers.rs  fbs.dot  fbs.rs  lib.rs  macros.rs  messages.rs  ortc.rs  prelude.rs  router.rs  rtp_parameters.rs  scalability_modes.rs  sctp_parameters.rs  srtp_parameters.rs  supported_rtp_capabilities.rs  transport.rs  webrtc_server.rs  webrtc_transport.rs  worker.rs  worker_manager.rs
rust/src/data_structures/: tests.rs
rust/src/ortc/: tests.rs
rust/src/router/: active_speaker_observer.rs  audio_level_observer.rs  consumer.rs  data_consumer.rs  data_producer.rs  direct_transport.rs  observer.rs  pipe_transport.rs  plain_transport.rs  producer.rs  rtp_observer.rs  tests.rs  transport.rs  webrtc_transport.rs
rust/src/rtp_parameters/: tests.rs
rust/src/scalability_modes/: tests.rs
rust/src/webrtc_server/: tests.rs
rust/src/worker/: channel.rs  channels.rs  common.rs  data_structures.rs  payload_channel.rs  utils.rs
rust/src/worker_manager/: tests.rs
rust/tests/: audio_level_observer.rs  consumer.rs  data_consumer.rs  data_producer.rs  direct_transport.rs  pipe_transport.rs  plain_transport.rs  producer.rs  router.rs  smoke.rs  webrtc_transport.rs  worker.rs
rust/tests/integration/: active_speaker_observer.rs  audio_level_observer.rs  consumer.rs  data_consumer.rs  data_producer.rs  direct_transport.rs  main.rs  multiopus.rs  pipe_transport.rs  plain_transport.rs  producer.rs  router.rs  smoke.rs  webrtc_server.rs  webrtc_transport.rs  worker.rs
worker/: .clang-format  .clang-format-include  .clang-tidy  .clang-tidy-ignore  CMakeLists.txt  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.fuzzer  FLATBUFFERS_TODO.md  Makefile  build.rs  common.gypi  compile_commands.json  compile_commands_template.json  fips.gypi  mediasoup-worker-notranscode.gyp  mediasoup-worker.gyp  mediasoup-worker.gyp.REAL  meson.build  meson_options.txt  tasks.py  win-tasks.js
worker/fbs/: activeSpeakerObserver.fbs  audioLevelObserver.fbs  common.fbs  consumer.fbs  dataConsumer.fbs  dataProducer.fbs  directTransport.fbs  liburing.fbs  log.fbs  meson.build  message.fbs  notification.fbs  pipeTransport.fbs  plainTransport.fbs  producer.fbs  request.fbs  response.fbs  router.fbs  rtpObserver.fbs  rtpPacket.fbs  rtpParameters.fbs  rtpStream.fbs  rtxStream.fbs  sctpAssociation.fbs  sctpParameters.fbs  srtpParameters.fbs  transport.fbs  webRtcServer.fbs  webRtcTransport.fbs  worker.fbs
worker/fuzzer/: Dockerfile  fuzzer.cpp
worker/fuzzer/corpora/: COPYRIGHT.txt
worker/fuzzer/deleteme/: fuzzer.sh
worker/fuzzer/include/: FuzzerUtils.hpp  fuzzers.hpp
worker/fuzzer/reports/: crash-04b2aebde2d97deee7a0a2d06ae03363e572bdc4  crash-058a4c1cc23eb6852d2d239a5596b10c572faa7b  crash-082d8c1a727f57b415a81ea68d8dd0c21804a4a1  crash-0dc02209b52dccc6555fe1729e8e08f2820fc91a  crash-13918482f73a9f3111c530ac2878890e59a556ae  crash-2ac1acbcc48ad55f82c8fe7f0694c4dae7a9d155  crash-2d204ea940d313bbdb69874f035ec5e7664b7181  crash-39021f8ac2393546626ab399cd87704b5fe62990  crash-6cfd7698f02bb829e64f926e2d8ce86596562843  crash-72edca69c08ec62a36afb96716b9df3048fd5854  crash-732ced16c38f8a29b621a590e243782f2102e771  crash-79806704a22dc7497d2459e16ff21098976fe685  crash-7e7caf72377ad55d353719f28febb5238eadfc9e  (+21 more)
worker/fuzzer/src/: fuzzer.cpp  (+4 more)
worker/include/: ChannelMessageHandlers.hpp  ChannelMessageRegistrator.hpp  DepLibSRTP.h  DepLibSRTP.hpp  DepLibSfuShm.hpp  DepLibUV.h  DepLibUV.hpp  DepLibUring.hpp  DepLibWebRTC.hpp  DepOpenSSL.h  DepOpenSSL.hpp  DepUsrSCTP.hpp  EventEmitter.h  EventEmitter.hpp  Globals.hpp  Lively.hpp  LivelyAppDataToJson.hpp  LivelyBinLogs.hpp  LogLevel.h  LogLevel.hpp  Logger.h  Logger.hpp  Loop.h  Loop.hpp  MediaSoupError.h  MediaSoupError.hpp  MediaSoupErrors.hpp  ObjectPoolAllocator.hpp  Settings.h  Settings.hpp  Utils.h  Utils.hpp  Worker.hpp  common.h  common.hpp  json.hpp  lib.hpp
worker/libwebrtc/: README.md  libwebrtc.gyp
worker/opt/: getopt.cpp
worker/scripts/: clang-format.mjs  clang-tidy.py  configure.py  cppcheck.sh  cpu_cores.sh  flint++.sh  get-dep.sh  get-pip-invoke.sh  getTriplet.js  get_dep.sh  getmake.py  gulpfile.js  gulpfile.mjs  lcov.sh  package-lock.json  package.json  run-fuzzer.sh
worker/src/: ChannelMessageHandlers.cpp  ChannelMessageRegistrator.cpp  DepLibSRTP.cpp  DepLibSfuShm.cpp  DepLibUV.cpp  DepLibUring.cpp  DepLibWebRTC.cpp  DepOpenSSL.cpp  DepUsrSCTP.cpp  Globals.cpp  Lively.cpp  LivelyAppDataToJson.cpp  LivelyBinLogs.cpp  Logger.cpp  Loop.cpp  MediaSoupErrors.cpp  Settings.cpp  Worker.cpp  core_grammar.rl  lib.cpp  lib.rs  main.cpp  main.rs
worker/subprojects/: .clang-tidy  abseil-cpp.wrap  catch2.wrap  flatbuffers.wrap  libsrtp2.wrap  liburing.wrap  libuv.wrap  netstring-c.wrap  nlohmann_json.wrap  openssl.wrap  usrsctp.wrap  wingetopt.wrap
worker/test/: fct.h  test-bitrate.cpp  test-nack-generator.cpp  test-nack.cpp  test-rtcp.cpp  test-rtp.cpp  test-rtpstreamrecv.cpp  test-seqmanager.cpp  tests.cpp
(+2371 files in other folders)
