[package]
name = "mediasoup"
version = "0.16.0"
description = "Cutting Edge WebRTC Video Conferencing in Rust"
categories = ["api-bindings", "multimedia", "network-programming"]
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2021"
license = "ISC"
keywords = ["webrtc", "ortc", "sfu"]
documentation = "https://docs.rs/mediasoup"
repository = "https://github.com/versatica/mediasoup"
readme = "README.md"
include = [
    "/benches",
    "/src",
    "/README.md"
]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
async-channel = "1.7.1"
async-executor = "1.4.1"
async-lock = "2.6.0"
async-oneshot = "0.5.0"
async-trait = "0.1.58"
atomic-take = "1.0.0"
event-listener-primitives = "2.0.1"
fastrand = "1.8.0"
futures-lite = "1.12.0"
h264-profile-level-id = "0.2.0"
hash_hasher = "2.0.3"
log = "0.4.17"
nohash-hasher = "0.2.0"
once_cell = "1.16.0"
planus = "0.4.0"
serde_json = "1.0.87"
serde_repr = "0.1.9"
thiserror = "1.0.37"

[dependencies.lru]
default-features = false
version = "0.8.1"

[dependencies.mediasoup-sys]
path = "../worker"
version = "0.8.0"

[dependencies.parking_lot]
version = "0.12.1"
features = ["serde"]

[dependencies.regex]
default-features = false
features = ["std", "perf"]
version = "1.6.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.190"

[dependencies.uuid]
features = ["serde", "v4"]
version = "1.2.1"

[dev-dependencies]
actix = "0.13.0"
actix-web-actors = "4.1.0"
async-io = "1.10.0"
criterion = "0.4.0"
env_logger = "0.9.1"
portpicker = "0.1.1"

[dev-dependencies.actix-web]
default-features = false
features = ["macros"]
version = "4.2.1"

[[bench]]
name = "direct_data"
harness = false
[[bench]]
name = "producer"
harness = false
